Some basics of variables from Wes Bos

--- a/playground/variables-FINISHED.html
+++ b/playground/variables-FINISHED.html
@@ -3,11 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Variables</title>
 </head>
 <body>
-    <script> 
-    console.log('hey');
+    <script>
+    // function scoped - var
+    var name = 'Jedrzej'; // variable declaration
+    
+    // block scoped - let and const {}
+    let age = 300;
+    const cool ='true';
+ 
+    name = "Wujek Jędrek" // you can update variables take a look on the first var 
+    //with name and then the second 'name', no need to set another 'var' 
+        var dog = 'berneńczyk';
+        dog = 'snickers';
+ 
+ //   console.log (age); //function call statement
+
+    // if (age > 10){
+    //     console.log('You are old');
+    // } 
     </script>
 </body>
 </html>
