initial commit for the following week

--- a/playground/variables-FINISHED.html
+++ b/playground/variables-FINISHED.html
@@ -9,21 +9,21 @@
     <script>
     // function scoped - var
     var name = 'Jedrzej'; // variable declaration
-    
+
     // block scoped - let and const {}
     let age = 300;
     const cool ='true';
- 
-    name = "Wujek Jędrek" // you can update variables take a look on the first var 
-    //with name and then the second 'name', no need to set another 'var' 
+
+    name = "Wujek Jędrek" // you can update variables take a look on the first var
+    //with name and then the second 'name', no need to set another 'var'
         var dog = 'berneńczyk';
         dog = 'snickers';
- 
- //   console.log (age); //function call statement
 
-    // if (age > 10){
-    //     console.log('You are old');
-    // } 
+   console.log (age); //function call statement
+
+    if (age > 10){
+        console.log('You are old');
+    }
     </script>
 </body>
 </html>
