--- a/playground/custom-functions/index.html
+++ b/playground/custom-functions/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  <button class="clickMe">Click Me!</button>
-  <script src="./ways-to-make-a-function.js"></script>
+
+  <script src="./cf.js"></script>
 </body>
 
 </html>
