--- a/playground/custom-functions/index.html
+++ b/playground/custom-functions/index.html
@@ -10,7 +10,8 @@
 
 <body>
 
-  <script src="./cf.js"></script>
+  <!-- <script src="./cf.js"></script> -->
+  <script src="ways-to-make-a-function-FINISHED.js"></script>
 </body>
 
 </html>
