callback function on click'

--- a/playground/custom-functions/index.html
+++ b/playground/custom-functions/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+  <button class="clickMe">Click me</button>
   <!-- <script src="./cf.js"></script> -->
   <script src="ways-to-make-a-function-FINISHED.js"></script>
 </body>
