Learning to get elements

--- a/exercises/20 - The DOM/the-dom-excercises.html
+++ b/exercises/20 - The DOM/the-dom-excercises.html
@@ -6,10 +6,10 @@
     <title>Excercises in DOM</title>
 </head>
 <body>
-    <p class="JP">Choose this element below</p>
+    <p class="JP">Choose that element below</p>
     <img src="https://picsum.photos/500">
 
-    <p class="parag">I will try to change this text</p>
+    <p class="paragraph" id = 'para'>I will try to change this text</p>
     <script src="./the-dom-excercises.js"></script>
 </body>
 </html>
