learning the toggle

--- a/exercises/20 - The DOM/index.html
+++ b/exercises/20 - The DOM/index.html
@@ -10,8 +10,12 @@
 </head>
 
 <body>
+
+  <img class="newImage" src="https://picsum.photos/600" />
+
+
   <p class="wes">I am Wes, I <em>love</em> to bbq and <strong>Make websites!</strong></p>
-  <img class="nice cool" src="https://picsum.photos/500" />
+  <img class="nice cool" src="https://picsum.photos/200" />
 
   <div class="items">
     <div class="item">
@@ -40,14 +44,13 @@
       display: none;
     }
 
-    img {
+    img{
       transition: all 0.2s;
     }
 
     .round {
       border-radius: 50%;
-      transform: rotate(1turn) scale(2);
-      box-shadow: 0 0 10px black;
+
     }
   </style>
 
