How to grab an element in DOM and put it inside an element created in JS

--- a/exercises/20 - The DOM/creating.html
+++ b/exercises/20 - The DOM/creating.html
@@ -6,6 +6,9 @@
     <title>Creating HTML</title>
 </head>
 <body>
+    <div>
+        
+    </div>
     <script src="./creating.js"> 
     </script>
 </body>
