How to use backticks to create a HTML in JS

--- a/exercises/20 - The DOM/creating.html
+++ b/exercises/20 - The DOM/creating.html
@@ -6,10 +6,13 @@
     <title>Creating HTML</title>
 </head>
 <body>
-    <div>
-        
+    <div class="item">
+        <img src="https://picsum.photos/200" />
     </div>
-    <script src="./creating.js"> 
-    </script>
+
+    <article class = "article">
+        This is an article.
+    </article>
+    <script src="./creating with strings.js"></script>
 </body>
 </html>
