A difference between an element and the node

--- a/exercises/20 - The DOM/creating.html
+++ b/exercises/20 - The DOM/creating.html
@@ -6,13 +6,16 @@
     <title>Creating HTML</title>
 </head>
 <body>
+    <article class="JJ">
+        I am JJ, I <em>love</em> running
+    </article>
     <div class="item">
         <img src="https://picsum.photos/200" />
     </div>
 
-    <article class = "article">
+    <article class = "JJ">
         This is an article.
     </article>
-    <script src="./creating with strings.js"></script>
+    <script src="traversing.js"></script>
 </body>
 </html>
