traversing and removing nodes

--- a/exercises/20 - The DOM/creating.html
+++ b/exercises/20 - The DOM/creating.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <article class="JJ">
-        I am JJ, I <em>love</em> running
+        I am JJ, I <em>love</em> running and <strong>making podcasts</strong>
     </article>
     <div class="item">
         <img src="https://picsum.photos/200" />
