Cardio JS from Wes Bos

--- a/exercises/20 - The DOM/creating.html
+++ b/exercises/20 - The DOM/creating.html
@@ -16,6 +16,6 @@
     <article class = "JJ">
         This is an article.
     </article>
-    <script src="traversing.js"></script>
+    <script src="DOM-Cardio.js"></script>
 </body>
 </html>
